tests/baselines/reference/typeSatisfaction_js.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
/src/a.js(1,29): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== /src/a.js (1 errors) ====
    var v = undefined satisfies 1;
                                ~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
    